--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "browser-sync": "^2.23.7",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
-    "gulp-clean-css": "^3.9.3",
+    "gulp-clean-css": "^3.9.4",
     "gulp-concat": "^2.6.1",
+    "gulp-if": "^2.0.2",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4"
   }
